Fix header overlapping issue

--- a/frontend/src/components/StudentHome/StudentHome.css
+++ b/frontend/src/components/StudentHome/StudentHome.css
@@ -173,3 +173,7 @@
     transform: translateY(0); /* Adjust the value as needed */
   }
 }
+
+.moveEverything{
+  margin-left: 100px;
+}
